Bug numbers refer to the BTS at http://pari.math.u-bordeaux.fr/Bugs/

Done for version 2.13.0 (released 19/10/2020):
  Fixed
     1- sizebyte(objects containing t_LIST): would assign size 3 to all lists
     2- [Map(Mat([0, 0])), [0, 0, 1]] -> SEGV
     3- zeta(I+2^(-64)) -> SEGV
BA   4- permorder returned incorrect results for large orders
     5- p=[4,54]; lfunmf(mfinit(p,0), mftraceform(p,0)) -> oo loop
BA   6- printf("%5.2f",M) transposed M [#2252]
     7- bnfinit instability at low accuracy. E.g., at \p38
        P=x^7+22*x^6+184*x^5+764*x^4+2020*x^3+3792*x^2+5712*x+4;
        bnfinit(P,1).no -> 4 times too large
     8- accuracy problems in bnfisunit after bnfinit(P,1). E.g.,
        P=x^7-22*x^6+169*x^5-568*x^4+1263*x^3-1506*x^2+2295*x+2;
        setrand(1); K=bnfinit(P,1); U=bnfunits(K,idealprimedec(K,2));
        bnfisunit(K,4*(x^2-18*x+85)/x^2*Mod(1,K.pol),U) -> error

  Added
     1- examples/pari.f90: example FORTRAN binding
     2- [libpari] quodif
BA   3- [libpari] perm_sqr, perm_powu, perm_orderu
BA   4- asymptotically fast quadunit

  Changed
     1- faster intnumgaussinit + change default number of points to B/4,
        suitable when b - a ~ distance to the nearest pole
BA   2- [libpari] perm_pow now take a t_INT exponent
BA   3- [libpari] permorder and perm_order now return a t_INT.

Done for version 2.12.1 (released 16/09/2020):
  Fixed
BA   1- plotlines flag was ignored
     2- fileopen(,"w" or "a") was bypassing the check for 'secure' default
     3- bug in idealismaximal: K=nfinit(y^2+7); idealismaximal(K,[11,7;0,1])->0
     4- bnfcertify did not certify correctly its argument when DEBUGLEVEL > 1
        (\g 2 and above) and the computed class group was trivial (introduced
        in 2002, commit d3d44841). The code was correct at \g1 or \g0, and in
        all cases if the computed class group was non-trivial.
     5- nfdiscfactors(nfinit([x^2+1, [1,x]])) -> wrong result (didn't support
        inputs from nfinit([T, integer basis]))