@@ -41,7 +41,9 @@ x^5 - 5/2*x^4 + 5/3*x^3 - 1/6*x
 1349758270676379026329737258680437265409027141273365440974202940525915613066
 3560412599913831518338400385290760913773448329773518728092595019422753511174
 189569/131070
+0.E-11
 601580873.90064236838430386817483591677
+0.E-31
 1
 0
 -1
@@ -95,11 +97,11 @@ x^4 + 26*x^3 + 66*x^2 + 26*x + 1
   *** eulerfrac: domain error in eulerfrac: index < 0
   ***   at top-level: eulerreal(-1)
   ***                 ^-------------
-  ***   not a function in function call
+  *** eulerreal: domain error in eulerreal: index < 0
   ***   at top-level: eulerpol(-1)
   ***                 ^------------
   *** eulerpol: domain error in eulerpol: index < 0
   ***   at top-level: eulerianpol(-1)
   ***                 ^---------------
   *** eulerianpol: domain error in eulerianpol: index <= 0
-Total time spent: 1
+Total time spent: 2
