@@ -8,7 +8,9 @@ bernreal(30)
 bernreal(202)
 bernreal(1024)
 bernfrac(256)
+eulerreal(30) - eulerfrac(30)
 localprec(57); bernreal(30)
+localprec(57); eulerreal(30) - eulerfrac(30)
 eulerfrac(0)
 eulerfrac(1)
 eulerfrac(2)
