@@ -1,4 +1,10 @@
 Bug numbers refer to the BTS at http://pari.math.u-bordeaux.fr/Bugs/
+Done for version 2.14.0 (released ??/??/2020):
+  Fixed
+  Added
+HC   1- new GP function eulerreal
+  Changed
+HC   1- faster implementation of eulervec + cache result
 
 Done for version 2.13.0 (released 19/10/2020):
   Fixed
